# checkpoint

./: .flake8  .gitignore  .pylintrc  AGENTS.md  Dockerfile  README.md  checkpoint.py  elm.json  grouper_mock.py  ldap_mock.py  migrate.py  package-lock.json  pyproject.toml
.cursor/rules/: checkpoint-elm.mdc  checkpoint-python.mdc  elm-debugger.mdc  slack-demo.mdc  test-data.mdc  ui-style-guide.mdc
.github/workflows/: build.yml  deploy.yml
.nomad/: checkpoint.nomad
.nomad/conf/: .env.tpl  nginx.conf
.nomad/scripts/: prestart.sh
elm/: Main.elm
js/: entrypoint.js
templates/: access_denied.html  app.html  layout.html
