[project]
name = "checkpoint"
version = "0"
description = "IAM support and troubleshooting tools"
authors = [
    {name = "Kristaps Berzinch",email = "kristapsberzinch@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "authlib (>=1.6.5,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "ldap3 (>=2.9.1,<3.0.0)",
    "uwsgi (>=2.0.31,<3.0.0)",
    "sentry-sdk[flask,pure-eval] (>=2.46.0,<3.0.0)",
    "flask-caching (>=2.3.1,<3.0.0)",
    "celery[redis] (>=5.6.1,<6.0.0)",
    "google-api-python-client (>=2.190.0,<3.0.0)",
    "slack-sdk (>=3.40.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-bugbear (>=25.10.21,<26.0.0)",
    "flake8-import-order (>=0.19.2,<0.20.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "pylint (>=4.0.3,<5.0.0)",
    "types-requests (>=2.32.4.20250913,<3.0.0.0)",
    "types-ldap3 (>=2.9.13.20251121,<3.0.0.0)",
    "types-authlib (>=1.6.5.20251005,<2.0.0.0)"
]


[tool.black]
line-length = 100
target-version = ['py314']
